增加导入功能

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -36,7 +36,7 @@
 
     <link href="../static/global/plugins/bootstrap-wysihtml5/bootstrap-wysihtml5.css" rel="stylesheet" type="text/css"/>
     <link rel="stylesheet" href="../static/layer/theme/default/layer.css">
-    <link href="../static/file_upload/css/fileinput.min.css" rel="stylesheet" type="text/css"/>
+    <link href="../static/file_upload/css/fileinput.css" rel="stylesheet" type="text/css"/>
     {#    <link href="../static/global/plugins/bootstrap-summernote/summernote.css" rel="stylesheet" type="text/css"/>#}
     {% block css %}
     {% endblock %}
@@ -44,7 +44,7 @@
     <script src="{{ url_for('static', filename='ckeditor/ckeditor.js') }}"></script>
     <script src="../static/layer/layer.js"></script>
     <script src="../static/global/plugins/bootstrap-timepicker/js/bootstrap-timepicker.min.js"></script>
-    <script src="../static/file_upload/js/fileinput.min.js"></script>
+    <script src="../static/file_upload/js/fileinput.js"></script>
     <script src="../static/file_upload/js/zh.js"></script>
 </head>
 <body class="page-container-bg-solid page-header-fixed page-sidebar-closed-hide-logo">
