--- a/app/templates/account/account_manage_list.html
+++ b/app/templates/account/account_manage_list.html
@@ -26,7 +26,9 @@
                                 </button>
                             </div>
                             <div class="col-md-4">
-                                <input id="excelFile" type="file">
+                                <button class="btn blue btn-circle pull-right" data-toggle="modal" data-target="#myModal">
+								批量导入
+							</button>
                             </div>
                         </div>
                         <div class="row">
@@ -66,39 +68,34 @@
                             </div>
                         </div>
                     </div>
-                <div id="import" class="modal fade bs-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-lg">
-        <div class="modal-content">
-            <div class="modal-header bg-primary">
-                <button type="button" class="close" data-dismiss="modal" aria-hidden="true"></button>
-                <h4 class="modal-title">文件导入</h4>
-            </div>
-            <div class="modal-body">
-                <div style="text-align:right;padding:5px">
-                    <a href="~/Content/Template/TestUser-模板.xls" onclick="javascript:Preview();">
-                        <img alt="测试用户信息-模板" src="~/Content/images/ico_excel.png" />
-                        <span style="font-size:larger;font-weight:200;color:red">TestUser-模板.xls</span>
-                    </a>
-                </div>
-                <hr/>
-                <form id="ffImport" method="post">
-                    <div title="Excel导入操作" style="padding: 5px">
-                        <input type="hidden" id="AttachGUID" name="AttachGUID" />
-                        <input id="excelFile" type="file">
-                    </div>
-                </form>
+                <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+								<div class="modal-dialog">
+									<div class="modal-content">
+										<div class="modal-header">
+											<button type="button" class="close" data-dismiss="modal" aria-hidden="true">
+												×
+											</button>
+											<h4 class="modal-title" id="myModalLabel">
+												批量导入白名单
+											</h4>
+										</div>
+										<div class="modal-body"><!-- 在这里添加一些文本 -->
 
-                <!--数据显示表格-->
-                <table id="gridImport" class="table table-striped table-bordered table-hover" cellpadding="0" cellspacing="0" border="0">
-                </table>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-default" data-dismiss="modal">关闭</button>
-                <button type="button" class="btn btn-primary" onclick="SaveImport()">保存</button>
-            </div>
-        </div>
-    </div>
-</div>
+											<form id="importFile" name="importFile" class="form-horizontal" method="post"
+												enctype="multipart/form-data">
+												<div>
+													<label class="control-label">请选择要导入的excel文件：</label>
+{#													<input id="excelFile" name="excelFile" class="file-loading" type="file" multiple accept=".xls,.xlsx">#}
+                                                    <input id="excelFile" type="file" class="file" data-show-preview="True">
+												</div>
+											</form>
+
+										</div>
+										<div class="modal-footer">
+										</div>
+									</div><!-- /.modal-content -->
+							</div><!-- /.modal -->
+							</div>
                     <input id="hidden_val" type="hidden" value="">
 
 {#                    {% if pagination %}#}
@@ -109,39 +106,81 @@
         </div>
     </div>
     <script type="text/JavaScript">
+        {##initUpload("excelFile","excelC.zcUserC.excelInput.do");#}
+							function initUpload(ctrlName,uploadUrl){
+								var control = $("#"+ctrlName);
+								control.fileinput({
+									language:"zh",//设置语言
+									uploadUrl:uploadUrl,//上传的地址
+									uploadAsync:true,//默认异步上传
+									showCaption:true,//是否显示标题
+									showUpload:true,//是否显示上传按钮
+									browseClass:"btn btn-primary",//按钮样式
+									allowedFileExtensions: ["xls", "xlsx"], //接收的文件后缀
+									maxFileCount: 1,//最大上传文件数限制
+									previewFileIcon:'<i class="glyphicon glyphcion-file"></i>',
+									showPreview: true, //是否显示预览
+ 									allowPreviewTypes:null,//是否显示预览
+									previewFileIconSettings:{
+										'docx':'<i class="glyphicon glyphcion-file"></i>',
+										'xlsx':'<i class="glyphicon glyphcion-file"></i>',
+										'pptx':'<i class="glyphicon glyphcion-file"></i>',
+										'jpg':'<i class="glyphicon glyphcion-picture"></i>',
+										'pdf':'<i class="glyphicon glyphcion-file"></i>',
+										'zip':'<i class="glyphicon glyphcion-file"></i>',
+									},
+									uploadExtraData:function(){
+										var extraValue = "test";
+										return {"excelType": extraValue};
+									}
+								});
+							}
 
-        $(function () {
-          //添加界面的附件管理
-          $('#file_upload').uploadify({
-            'swf': '/Content/JQueryTools/uploadify/uploadify.swf', //FLash文件路径
-            'buttonText': '浏 览',                 //按钮文本
-            'uploader': '/FileUpload/Upload',            //处理上传的页面
-            'queueID': 'fileQueue',             //队列的ID
-            'queueSizeLimit': 1,              //队列最多可上传文件数量，默认为999
-            'auto': false,                 //选择文件后是否自动上传，默认为true
-            'multi': false,                 //是否为多选，默认为true
-            'removeCompleted': true,            //是否完成后移除序列，默认为true
-            'fileSizeLimit': '10MB',            //单个文件大小，0为无限制，可接受KB,MB,GB等单位的字符串值
-            'fileTypeDesc': 'Excel Files',         //文件描述
-            'fileTypeExts': '*.xls',            //上传的文件后缀过滤器
-            'onQueueComplete': function (event, data) {   //所有队列完成后事件
-              //业务处理代码
-              //提示用户Excel格式是否正常，如果正常加载数据
-            },
-            'onUploadStart': function (file) {
+							$("#excelFile").on("fileuploaded",function(exevt,data,previewId,index){
+								console.log("data:"+data.response.success);
+// 								alert(data);
+								if(data.response.success == "ok"){
+									alert("导入成功！");
+									$("#excelFile").fileinput("clear");
+									$("#excelFile").fileinput("reset");
+									$("#excelFile").fileinput("refresh");
+									$("#excelFile").fileinput("enable");
+									$(".close").click();
+									$("#reload").click();
+								}else{
+									alert("导入失败:"+data.response.message);
+									$("#excelFile").fileinput("clear");
+									$("#excelFile").fileinput("reset");
+									$("#excelFile").fileinput("refresh");
+									$("#excelFile").fileinput("enable");
+								}
+							});
 
-                InitUpFile();//上传文件前 ，重置GUID，每次不同
-                $("#file_upload").uploadify("settings", 'formData', { 'folder': '数据导入文件', 'guid': $("#AttachGUID").val() }); //动态传参数
-            },
-            'onUploadError': function (event, queueId, fileObj, errorObj) {
-              //alert(errorObj.type + "：" + errorObj.info);
-            }
-          });
-        });
+        //初始化控件initFileInput(id,uploadurl)控件id，与上传路径
+        initUpload("excelFile", "/file_upload");
 
-        function ShowImport() {
-            $("#import").modal("show");
-        }
+        function insitFileInput(ctrlName, uploadUrl) {
+              var control = $('#' + ctrlName);
+              control.fileinput({
+                resizeImage : true,
+                maxImageWidth : 200,
+                maxImageHeight : 200,
+                resizePreference : 'width',
+                language : 'zh', //设置语言
+                uploadUrl : uploadUrl,
+                uploadAsync : true,
+                allowedFileExtensions : ['xls','xlsx'],//接收的文件后缀
+                showUpload : true, //是否显示上传按钮
+                showCaption : true,//是否显示标题
+                browseClass : "btn btn-primary", //按钮样式
+                previewFileIcon : "<i class='glyphicon glyphicon-king'></i>",
+                maxFileCount : 3,
+                msgFilesTooMany : "选择图片超过了最大数量",
+                maxFileSize : 2000,
+              });
+
+            };
+
         function add_monitor_info() {
             window.location.href = "/add_monitor"
         }
