增加账户体系

--- a/app/templates/account/account_manage_list.html
+++ b/app/templates/account/account_manage_list.html
@@ -76,7 +76,7 @@
 												×
 											</button>
 											<h4 class="modal-title" id="myModalLabel">
-												批量导入白名单
+												导入帐号
 											</h4>
 										</div>
 										<div class="modal-body"><!-- 在这里添加一些文本 -->
@@ -182,11 +182,11 @@
             };
 
         function add_monitor_info() {
-            window.location.href = "/add_monitor"
+            window.location.href = "/add_account_info"
         }
 
         function modify_monitor_data(id) {
-            window.location.href = "/modify_monitor_data?id=" + id;
+            window.location.href = "/modify_account_info?id=" + id;
         }
 
     </script>
