--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -5,7 +5,7 @@
 
     <meta charset="utf-8"/>
     <title>文章-CMS</title>
-    <link href="/static/global/img/favicon.ico" rel="shortcut icon"/>
+    <link href="#" rel="shortcut icon"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta content="width=device-width, initial-scale=1" name="viewport"/>
     <meta content="" name="description"/>
@@ -51,8 +51,8 @@
 <div class="page-header navbar navbar-fixed-top">
     <div class="page-header-inner ">
         <div class="page-logo">
-            <a href="http://aibilink.com/">
-                <img src="/static/global/img/logo122.svg" alt="logo" class="logo-default"/> </a>
+            <a href="#">
+                <img src="#" alt="logo" class="logo-default"/> </a>
         </div>
         <a href="javascript:;" class="menu-toggler responsive-toggler" data-toggle="collapse"
            data-target=".navbar-collapse"> </a>
