--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -136,7 +136,7 @@
                     </a>
                     <ul class="sub-menu">
                         <li class="nav-item  ">
-                            <a href="/new_flash_list" class="nav-link ">
+                            <a href="/article_list" class="nav-link ">
                                 <span class="title" id="news_list">文章列表</span>
                                 <span class="badge" id="news_count" style="background: #3598dc"></span>
                             </a>
