--- a/app/templates/article/article_list.html
+++ b/app/templates/article/article_list.html
@@ -10,11 +10,11 @@
                     <div class="portlet light bordered">
                         <ul class="page-breadcrumb breadcrumb">
                             <li>
-                                <a href="">账户管理</a>
+                                <a href="">文章管理</a>
                                 <i class="fa fa-circle"></i>
                             </li>
                             <li>
-                                <span class="active">账户列表</span>
+                                <span class="active">文章列表</span>
                             </li>
                         </ul>
                         <!-- Single button -->
@@ -22,12 +22,12 @@
                             <div class="col-md-8">
 
                                 <button type="button" class="btn blue btn-circle" onclick='add_monitor_info()'
-                                        style="margin-left: 10px">新增账户信息
+                                        style="margin-left: 10px">新增文章信息
                                 </button>
                             </div>
                             <div class="col-md-4">
                                 <button class="btn blue btn-circle pull-right" data-toggle="modal" data-target="#myModal">
-								批量导入
+								文章导入
 							</button>
                             </div>
                         </div>
@@ -38,14 +38,9 @@
                                         <thead>
                                         <tr>
                                             <th>ID</th>
-                                            <th>账户名称</th>
-                                            <th>账户等级</th>
-                                            <th>账户类型</th>
-                                            <th>已文章数量</th>
-                                            <th>总阅读量</th>
-                                            <th>总播放量</th>
-                                            <th>总订阅数</th>
-                                            <th>帐号指数</th>
+                                            <th>文章标题</th>
+                                            <th>文章类型</th>
+                                            <th>文章状态</th>
                                             <th>创建日期</th>
                                             <th>操作</th>
                                         </tr>
@@ -54,9 +49,9 @@
                                         {% for row in data %}
                                             <tr id="tr-{{ row['id'] }}">
                                                 <td>{{ row["id"] }}</td>
-                                                <td>{{ row["account_name"]}}</td>
-                                                <td>{{ row["account_rank"] }}</td>
-                                                {% if row["account_type"] == 1 %}
+                                                <td>{{ row["article_title"]}}</td>
+                                                <td>{{ row["article_cover"] }}</td>
+                                                {% if row["article_type"] == 1 %}
                                                     <td id="show_info">原创</td>
                                                 {% elif row["account_type"] == 2 %}
                                                     <td id="show_info">解盘</td>
@@ -71,11 +66,7 @@
                                                 {% elif row["account_type"] == 7%}
                                                     <td id="show_info">解盘6</td>
                                                 {% endif %}
-                                                <td>{{ row["account_article_num"] }}</td>
-                                                <td>{{ row["total_read_num"] }}</td>
-                                                <td>{{ row["total_play_num"] }}</td>
-                                                <td>{{ row["total_subscribe_num"] }}</td>
-                                                <td>{{ row["account_index"] }}</td>
+                                                <td>{{ row["is_send"] }}</td>
                                                 <td>{{ row["create_time"] }}</td>
                                                 <td>
                                                     <button type="button"
@@ -98,7 +89,7 @@
 												×
 											</button>
 											<h4 class="modal-title" id="myModalLabel">
-												导入帐号
+												导入文章
 											</h4>
 										</div>
 										<div class="modal-body"><!-- 在这里添加一些文本 -->
@@ -106,9 +97,23 @@
 											<form id="importFile" name="importFile" class="form-horizontal" method="post"
 												enctype="multipart/form-data">
 												<div>
-													<label class="control-label">请选择要导入的excel文件：</label>
+													<label class="control-label">请选择要导入的文件：</label>
 {#													<input id="excelFile" name="excelFile" class="file-loading" type="file" multiple accept=".xls,.xlsx">#}
                                                     <input id="excelFile" type="file" class="file" data-show-preview="True">
+												</div>
+                                                <br>
+                                                <div>
+													<label class="control-label">文章类型</label>
+{#													<input id="excelFile" name="excelFile" class="file-loading" type="file" multiple accept=".xls,.xlsx">#}
+                                                    <select class="form-control input-small" id="account_type">
+                                                        <option value=1>原创</option>
+                                                        <option value=2>解盘(币莱解盘)</option>
+                                                        <option value=3>视频(币莱播报)</option>
+                                                        <option value=4>音频</option>
+                                                        <option value=5>PDF</option>
+                                                        <option value=6>早报</option>
+                                                        <option value=7>晚报</option>
+                                                    </select>
 												</div>
 											</form>
 
@@ -121,7 +126,7 @@
                     <input id="hidden_val" type="hidden" value="">
 
                     {% if pagination %}
-                        {{ macro_pagination.pagination_widget(pagination,'new_flash.account_manage_list') }}
+                        {{ macro_pagination.pagination_widget(pagination,'new_flash.article_list') }}
                     {% endif %}
                 </div>
             </div>
@@ -138,7 +143,7 @@
 									showCaption:true,//是否显示标题
 									showUpload:true,//是否显示上传按钮
 									browseClass:"btn btn-primary",//按钮样式
-									allowedFileExtensions: ["xls", "xlsx"], //接收的文件后缀
+									allowedFileExtensions: ["xls", "xlsx", "doc"], //接收的文件后缀
 									maxFileCount: 1,//最大上传文件数限制
 									previewFileIcon:'<i class="glyphicon glyphcion-file"></i>',
 									showPreview: true, //是否显示预览
@@ -179,7 +184,7 @@
 							});
 
         //初始化控件initFileInput(id,uploadurl)控件id，与上传路径
-        initUpload("excelFile", "/file_upload");
+        initUpload("excelFile", "/article_file_upload");
 
         function insitFileInput(ctrlName, uploadUrl) {
               var control = $('#' + ctrlName);
