--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -141,6 +141,12 @@
                                 <span class="badge" id="news_count" style="background: #3598dc"></span>
                             </a>
                         </li>
+                        <li class="nav-item  ">
+                            <a href="/article_upload_set" class="nav-link ">
+                                <span class="title" id="news_list">文章上传设置</span>
+                                <span class="badge" id="news_count" style="background: #3598dc"></span>
+                            </a>
+                        </li>
                     </ul>
                 </li>
 
