--- a/app/templates/login/user_login.html
+++ b/app/templates/login/user_login.html
@@ -29,7 +29,7 @@
         </div>
         <div class="content">
             <form class="login-form" method="post">
-                <h3 class="form-title font-green">AiBiCoin</h3>
+                <h3 class="form-title font-green">文章CMS</h3>
                 <div class="alert alert-danger display-hide">
                     <button class="close" data-close="alert"></button>
                     <span> Enter any username and password. </span>
