--- a/app/templates/article/add_article_upload_set.html
+++ b/app/templates/article/add_article_upload_set.html
@@ -58,6 +58,10 @@
                                             </select>
                                         </div>
                                     </div>
+                                    <div class="form-group">
+                                        <label class="control-label col-md-1">发送类型</label>
+                                        <input type="text" value="2017-07-31 17:58" id="datetimepicker"  class="form_datetime" data-date-format="yyyy-mm-dd hh:ii">
+                                    </div>
                                 </div>
                                 <div class="form-actions">
                                     <div class="row">
