--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -110,22 +110,22 @@
                     </ul>
                 </li>
 
-                <li class="nav-item  ">
-                    <a href="javascript:;" class="nav-link nav-toggle">
-                        <i class="icon-layers"></i>
-                        <span class="title">数据统计</span>
-                        <span class="arrow"></span>
-                        <span id="news_title_count" style="background: #f9b515" class="badge"></span>
-                    </a>
-                    <ul class="sub-menu">
-                        <li class="nav-item  ">
-                            <a href="/new_flash_list" class="nav-link ">
-                                <span class="title" id="news_list">数据列表</span>
-                                <span class="badge" id="news_count" style="background: #3598dc"></span>
-                            </a>
-                        </li>
-                    </ul>
-                </li>
+{#                <li class="nav-item  ">#}
+{#                    <a href="javascript:;" class="nav-link nav-toggle">#}
+{#                        <i class="icon-layers"></i>#}
+{#                        <span class="title">数据统计</span>#}
+{#                        <span class="arrow"></span>#}
+{#                        <span id="news_title_count" style="background: #f9b515" class="badge"></span>#}
+{#                    </a>#}
+{#                    <ul class="sub-menu">#}
+{#                        <li class="nav-item  ">#}
+{#                            <a href="/new_flash_list" class="nav-link ">#}
+{#                                <span class="title" id="news_list">数据列表</span>#}
+{#                                <span class="badge" id="news_count" style="background: #3598dc"></span>#}
+{#                            </a>#}
+{#                        </li>#}
+{#                    </ul>#}
+{#                </li>#}
 
                 <li class="nav-item  ">
                     <a href="javascript:;" class="nav-link nav-toggle">
