--- a/app/templates/login/user_login.html
+++ b/app/templates/login/user_login.html
@@ -5,7 +5,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
-        <title>AiBiCoin-Backend</title>
+        <title>CMS-Backend</title>
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta content="width=device-width, initial-scale=1" name="viewport" />
         <meta content="" name="description" />s
